# swagger_server/service/student_service.py
@@ -16,19 +16,26 @@ student_db = TinyDB(db_file_path)
 
 
 def add_student(student):
+
+    if not student.last_name:
+        return 'no last name', 405
+
+    if not student.first_name:
+        return 'no first name', 405
+
     queries = []
     query = Query()
     queries.append(query.first_name == student.first_name)
     queries.append(query.last_name == student.last_name)
     query = reduce(lambda a, b: a & b, queries)
     res = student_db.search(query)
+
     if res:
         return 'already exists', 409
 
     doc_id = student_db.insert(student.to_dict())
     student.student_id = doc_id
     return student.student_id
-
 
 def get_student_by_id(student_id, subject):
     student = student_db.get(doc_id=int(student_id))
@@ -37,8 +44,19 @@ def get_student_by_id(student_id, subject):
     student = Student.from_dict(student)
     if not subject:
         return student
-    return student
+    else:
+        for k, v in student.grades.items():
+            if k == subject:
+                return student
 
+def get_student_by_last_name(last_name):
+    queries = []
+    query = Query()
+    queries.append(query.last_name == last_name)
+    query = reduce(lambda a, b: a & b, queries)
+    res = student_db.search(query)
+    
+    return res
 
 def delete_student(student_id):
     student = student_db.get(doc_id=int(student_id))
